Lesson 2. Repeat and filters

--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -8,6 +8,7 @@
         {% include 'mainapp/includes/inc_menu.html' %}
     </div>
     <h1>наши контакты</h1>
+    <p>сегодня: {{ visit_date|date:"l, j F, Y, G - i" }}</p>
 </div>
 {% endblock %}
 
